--- a/Guiddy.Wpf/MainWindow.xaml
+++ b/Guiddy.Wpf/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Guiddy" Height="226" Width="320">
     <Grid Margin="0,0,0,0">
-        <TextBox x:Name="outputTextBox" HorizontalAlignment="Left" Height="23" Margin="10,15,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="3"/>
+        <TextBox x:Name="outputTextBox" HorizontalAlignment="Left" Height="23" Margin="10,15,10,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="3" ToolTip="New GUIDs will output here."/>
         <CheckBox x:Name="checkBoxUppercase" Content="Uppercase" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalAlignment="Top" Width="201" Grid.ColumnSpan="3" IsChecked="True"/>
         <CheckBox x:Name="checkBoxHyphens" Content="Hyphens" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <CheckBox x:Name="checkBoxClipboard" Content="Copy To Clipboard" HorizontalAlignment="Left" Margin="10,115,0,0" VerticalAlignment="Top" IsChecked="True"/>
